fix centering of give-info on mobile

--- a/src/views/Give/Give.scss
+++ b/src/views/Give/Give.scss
@@ -546,6 +546,7 @@
 
   .give-info {
     width: 220px;
+    margin: auto; 
 
     .give-info-deposit-box {
       margin-right: 0px;
